--- a/ibovespa_returns.ipynb
+++ b/ibovespa_returns.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bd49e771",
+   "id": "e502d4d5",
    "metadata": {},
    "source": [
     "# Analyzing Ibovespa's stocks individual returns\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3be35df2",
+   "id": "93d2219a",
    "metadata": {},
    "source": [
     "In this code, we'll analyze **returns of individual stocks which compose Ibovespa** (the reference index of B3, the Brazilian stock exchange) in the **last 5 years**.\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11746a13",
+   "id": "824d5704",
    "metadata": {},
    "source": [
     "### Importing libraries"
@@ -45,9 +45,11 @@
     "# Plotting\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "import plotly.graph_objects as go\n",
-    "import plotly.io as pio\n",
-    "pio.renderers.default = \"svg\"\n",
+    "\n",
+    "from plotly.offline import plot, iplot, init_notebook_mode\n",
+    "import plotly.graph_objs as go\n",
+    "init_notebook_mode(connected=True)\n",
+    "\n",
     "\n",
     "# Datetime\n",
     "from datetime import datetime\n",
@@ -165,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ace28a9",
+   "id": "71aac07c",
    "metadata": {},
    "source": [
     "### Extracting stocks' symbols and converting it to a list"
@@ -174,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6539bafc",
+   "id": "20fe2c2e",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "883de91c",
+   "id": "20f18a41",
    "metadata": {},
    "source": [
     "### Including '.SA' suffix so we can download Brazilian stock data from Yahoo Finance"
@@ -204,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e1bd7371",
+   "id": "7d89159f",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59a1da23",
+   "id": "cde3df4f",
    "metadata": {},
    "source": [
     "### Setting start date (5 years ago) and end date (yesterday) for stock data"
@@ -247,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67a23612",
+   "id": "137627cc",
    "metadata": {},
    "source": [
     "### Downloading stock data from Yahoo Finance"
@@ -464,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5f708df",
+   "id": "c021104f",
    "metadata": {},
    "source": [
     "### Checking columns with NA values"
@@ -846,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0266e81b",
+   "id": "7f7376d8",
    "metadata": {},
    "source": [
     "#### I checked previously that there are missing values for some stocks before 2021. To simplify our analysis, we'll drop columns with NA"
@@ -855,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c2390cba",
+   "id": "755a3e45",
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "471b245f",
+   "id": "a9ee0591",
    "metadata": {},
    "source": [
     "### Extracting the first and last rows so we can calculate returns in the last 5 years"
@@ -1109,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3ecc5699",
+   "id": "f1e7c7fd",
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "209e6dc7",
+   "id": "5c6c593a",
    "metadata": {},
    "source": [
     "### Transposing the dataset for a better visualization and changing column names (also removing '.SA' suffix)"
@@ -1577,7 +1579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a3cfdf8",
+   "id": "d4cd7fcc",
    "metadata": {},
    "source": [
     "### Boxplot of returns\n",
@@ -1610,7 +1612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfa77eeb",
+   "id": "473a1a81",
    "metadata": {},
    "source": [
     "### Density chart of returns"
@@ -1639,7 +1641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "104b3cf7",
+   "id": "436ee9fc",
    "metadata": {},
    "source": [
     "### Histogram of returns\n",
@@ -1670,7 +1672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41a85f32",
+   "id": "037bcc93",
    "metadata": {},
    "source": [
     "### What are the 10 stocks with higher returns in the last 5 years?\n",
@@ -2708,7 +2710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0d35d00",
+   "id": "37c0a5af",
    "metadata": {},
    "source": [
     "### What are the 10 stocks with lower returns in the last 5 years?"
@@ -3659,7 +3661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb0dc037",
+   "id": "b7a71264",
    "metadata": {},
    "source": [
     "### What is the proportion of positive and negative returns in the last 5 years?"
@@ -4707,14 +4709,6 @@
     "\n",
     "fig.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "161d9735",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
