--- a/ibovespa_returns.ipynb
+++ b/ibovespa_returns.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e502d4d5",
+   "id": "435df025",
    "metadata": {},
    "source": [
     "# Analyzing Ibovespa's stocks individual returns\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93d2219a",
+   "id": "fb6623ad",
    "metadata": {},
    "source": [
     "In this code, we'll analyze **returns of individual stocks which compose Ibovespa** (the reference index of B3, the Brazilian stock exchange) in the **last 5 years**.\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "824d5704",
+   "id": "f842a797",
    "metadata": {},
    "source": [
     "### Importing libraries"
@@ -46,10 +46,12 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
+    "import plotly.io as pio\n",
+    "pio.renderers\n",
+    "\n",
     "from plotly.offline import plot, iplot, init_notebook_mode\n",
     "import plotly.graph_objs as go\n",
     "init_notebook_mode(connected=True)\n",
-    "\n",
     "\n",
     "# Datetime\n",
     "from datetime import datetime\n",
@@ -167,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71aac07c",
+   "id": "15be654a",
    "metadata": {},
    "source": [
     "### Extracting stocks' symbols and converting it to a list"
@@ -176,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "20fe2c2e",
+   "id": "513adf51",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20f18a41",
+   "id": "3887b7e1",
    "metadata": {},
    "source": [
     "### Including '.SA' suffix so we can download Brazilian stock data from Yahoo Finance"
@@ -206,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7d89159f",
+   "id": "e1e58b80",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cde3df4f",
+   "id": "5014c39d",
    "metadata": {},
    "source": [
     "### Setting start date (5 years ago) and end date (yesterday) for stock data"
@@ -249,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "137627cc",
+   "id": "fb30b425",
    "metadata": {},
    "source": [
     "### Downloading stock data from Yahoo Finance"
@@ -466,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c021104f",
+   "id": "4eea9262",
    "metadata": {},
    "source": [
     "### Checking columns with NA values"
@@ -848,7 +850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f7376d8",
+   "id": "c75f7cc4",
    "metadata": {},
    "source": [
     "#### I checked previously that there are missing values for some stocks before 2021. To simplify our analysis, we'll drop columns with NA"
@@ -857,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "755a3e45",
+   "id": "8fc2786a",
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9ee0591",
+   "id": "0bde6365",
    "metadata": {},
    "source": [
     "### Extracting the first and last rows so we can calculate returns in the last 5 years"
@@ -1111,7 +1113,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f1e7c7fd",
+   "id": "482ea983",
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c6c593a",
+   "id": "2734211a",
    "metadata": {},
    "source": [
     "### Transposing the dataset for a better visualization and changing column names (also removing '.SA' suffix)"
@@ -1579,7 +1581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4cd7fcc",
+   "id": "c5d80ef0",
    "metadata": {},
    "source": [
     "### Boxplot of returns\n",
@@ -1612,7 +1614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "473a1a81",
+   "id": "10e2913f",
    "metadata": {},
    "source": [
     "### Density chart of returns"
@@ -1641,7 +1643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "436ee9fc",
+   "id": "95ff5241",
    "metadata": {},
    "source": [
     "### Histogram of returns\n",
@@ -1672,7 +1674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "037bcc93",
+   "id": "8f931517",
    "metadata": {},
    "source": [
     "### What are the 10 stocks with higher returns in the last 5 years?\n",
@@ -2705,12 +2707,12 @@
     "    yaxis={'categoryorder': 'total ascending'},\n",
     "    title_text='10 stocks with higher returns in the last 5 years (%)')\n",
     "\n",
-    "fig.show()"
+    "fig.show('png')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "37c0a5af",
+   "id": "75730562",
    "metadata": {},
    "source": [
     "### What are the 10 stocks with lower returns in the last 5 years?"
@@ -3661,7 +3663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7a71264",
+   "id": "3a0cb989",
    "metadata": {},
    "source": [
     "### What is the proportion of positive and negative returns in the last 5 years?"
