--- a/ibovespa_returns.ipynb
+++ b/ibovespa_returns.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "435df025",
+   "id": "d5e063bd",
    "metadata": {},
    "source": [
     "# Analyzing Ibovespa's stocks individual returns\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb6623ad",
+   "id": "8b441b1c",
    "metadata": {},
    "source": [
     "In this code, we'll analyze **returns of individual stocks which compose Ibovespa** (the reference index of B3, the Brazilian stock exchange) in the **last 5 years**.\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f842a797",
+   "id": "31bbf17e",
    "metadata": {},
    "source": [
     "### Importing libraries"
@@ -46,12 +46,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "import plotly.io as pio\n",
-    "pio.renderers\n",
-    "\n",
-    "from plotly.offline import plot, iplot, init_notebook_mode\n",
     "import plotly.graph_objs as go\n",
-    "init_notebook_mode(connected=True)\n",
     "\n",
     "# Datetime\n",
     "from datetime import datetime\n",
@@ -169,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15be654a",
+   "id": "3333bfcd",
    "metadata": {},
    "source": [
     "### Extracting stocks' symbols and converting it to a list"
@@ -178,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "513adf51",
+   "id": "b5d9bb9c",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3887b7e1",
+   "id": "58eb4b72",
    "metadata": {},
    "source": [
     "### Including '.SA' suffix so we can download Brazilian stock data from Yahoo Finance"
@@ -208,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e1e58b80",
+   "id": "3af14a29",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5014c39d",
+   "id": "b5356d17",
    "metadata": {},
    "source": [
     "### Setting start date (5 years ago) and end date (yesterday) for stock data"
@@ -251,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb30b425",
+   "id": "c8dc90a7",
    "metadata": {},
    "source": [
     "### Downloading stock data from Yahoo Finance"
@@ -468,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eea9262",
+   "id": "6c538177",
    "metadata": {},
    "source": [
     "### Checking columns with NA values"
@@ -850,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c75f7cc4",
+   "id": "29f468e2",
    "metadata": {},
    "source": [
     "#### I checked previously that there are missing values for some stocks before 2021. To simplify our analysis, we'll drop columns with NA"
@@ -859,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8fc2786a",
+   "id": "16b7c292",
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1099,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bde6365",
+   "id": "326ca66e",
    "metadata": {},
    "source": [
     "### Extracting the first and last rows so we can calculate returns in the last 5 years"
@@ -1113,7 +1108,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "482ea983",
+   "id": "c25db387",
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2734211a",
+   "id": "eae79cad",
    "metadata": {},
    "source": [
     "### Transposing the dataset for a better visualization and changing column names (also removing '.SA' suffix)"
@@ -1581,7 +1576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5d80ef0",
+   "id": "f5f15776",
    "metadata": {},
    "source": [
     "### Boxplot of returns\n",
@@ -1614,7 +1609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10e2913f",
+   "id": "7ee5f184",
    "metadata": {},
    "source": [
     "### Density chart of returns"
@@ -1643,7 +1638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95ff5241",
+   "id": "2ea58d92",
    "metadata": {},
    "source": [
     "### Histogram of returns\n",
@@ -1674,7 +1669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f931517",
+   "id": "57df3c5f",
    "metadata": {},
    "source": [
     "### What are the 10 stocks with higher returns in the last 5 years?\n",
@@ -2712,7 +2707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75730562",
+   "id": "768cf0a5",
    "metadata": {},
    "source": [
     "### What are the 10 stocks with lower returns in the last 5 years?"
@@ -3658,12 +3653,12 @@
     "    yaxis={'categoryorder': 'total descending'},\n",
     "    title_text='10 stocks with lower returns in the last 5 years (%)')\n",
     "\n",
-    "fig.show()"
+    "fig.show('png')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3a0cb989",
+   "id": "dc503fef",
    "metadata": {},
    "source": [
     "### What is the proportion of positive and negative returns in the last 5 years?"
@@ -4709,7 +4704,7 @@
     "\n",
     "fig.update_layout(title_text='Proportion of positive and negative returns in the last 5 years')\n",
     "\n",
-    "fig.show()"
+    "fig.show('png')"
    ]
   }
  ],
